--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation "io.coil-kt:coil:1.2.2"
+    implementation "io.coil-kt:coil-gif:1.2.2"
 }
